# cadir-agent

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yaml
apps/api/: Dockerfile  eslint.config.js  package.json  tsconfig.json
apps/web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/adr/: 0001-platform-and-runtime-stack.md  0002-security-and-isolation-boundaries.md  0003-data-storage-and-delivery.md  0004-opencode-and-simplecad-vendoring.md  README.md
docs/baseline/: PRODUCT_SCOPE.md  SOURCE_READ_EVIDENCE.md
docs/configuration/: NON_FUNCTIONAL_BASELINE.md
docs/contracts/: README.md
docs/deployment/: SERVER_DOCKER.md
docs/development/: LOCAL_ENVIRONMENT.md
infra/: compose.production.yaml  compose.server.yaml  compose.yaml  server.env.example
scripts/: dev-data.mjs  dev-env.ps1  dev-env.sh  healthcheck.mjs  server-deploy.mjs
services/runner/: Dockerfile  constraints.txt  pyproject.toml
services/runner/src/cadir_runner/: __init__.py  app.py  contracts.py  derive.py  executor.py  security.py  tools.py
services/runner/tests/: test_derive.py  test_executor.py  test_health.py  test_security.py  test_tools.py
tests/: README.md  vitest.integration.config.ts
tests/acceptance/: baseline-governance.test.ts  catalog.test.ts
workers/freecad/: Dockerfile  pyproject.toml
workers/freecad/src/cadir_freecad/: app.py
(+99 files in other folders)
